updated about page, renamed 1st blog post

--- a/_notebooks/2020-03-28-Relearning-How-To-Learn-Deep.ipynb
+++ b/_notebooks/2020-03-28-Relearning-How-To-Learn-Deep.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Re-learning how to learn, deep.\n",
+    "# Relearning how to learn, deep.\n",
     "> Using Fastai to become a state-of-the-art deep learning practitioner!\n",
     "\n",
     "- toc: true\n",
@@ -49,7 +49,6 @@
     "In less than two weeks, I binged watch through the entire part 1! The course was nothing like I had taken  before! All the concepts explained intuitively in simple and easy manner and more importantly, everything taught was visualized through code and by building state-of-the-art models. Unfortunately, I couldn't put in the necessary focus and didn't follow through completely. But this time around I made sure to take a break in order to pursue the course this time around.\n",
     "\n",
     "---\n",
-    "## ~~Fact: Deep Learning is hard!~~\n",
     "## Fact: Deep Learning is easy, if done right!\n",
     "\n",
     "The main idea of the [course](https://www.fast.ai/) and the [library](https://dev.fast.ai/) is to democratize this powerful tool of 'Deep Learning', such that it can be easily harnessed by people across all domains such that one apply the principles easily in their domain.\n",
