Made some visdual changes to 1st post

--- a/_notebooks/2020-03-28-Relearning-How-To-Learn-Deep.ipynb
+++ b/_notebooks/2020-03-28-Relearning-How-To-Learn-Deep.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Enter Fastai\n",
+    "## Enter Fastai\n",
     "\n",
     "I heard about Fastai and Jeremy Howard from my friends around version 1 of the course. I pushed it aside as one of the many courses suggested by people in the field due to their inherent allegiance to it having taken it. But over time, on Twitter, LinkedIn, and other sources, it had reached a point that I couldn't not take a look at the course. So I finally succumbed to the pressure and started last year's [course](https://course.fast.ai/). \n",
     "\n",
@@ -67,7 +67,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## My blog posts:\n",
+    "## My blog posts\n",
     "\n",
     "There's definitely a self-centered motivation to write these blog posts. Following the advice by Rachel Thomas(co-founder of fast.ai) in her [blog post](https://medium.com/@racheltho/why-you-yes-you-should-blog-7d2544ac1045), she encourages anyone on a learning path to put out blog posts in-order to maximize your learning.\n",
     "\n",
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "\n",
     "### Importing the library and necessary modules"
    ]
   },
@@ -120,7 +120,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### About the dataset:\n",
+    "### About the dataset\n",
     "Let's start off with the Flowers [dataset](https://www.robots.ox.ac.uk/~vgg/data/flowers/) which is a common dataset for image classification tasks. The dataset is a collection of images of 102 different types of flowers which is nicely curated. The images of fairly reasonable size, shot in different angles and lighting conditions. In addition, there are categories that have large variations within the category and several very similar categories. \n",
     "\n",
     "Here's a [list](https://www.robots.ox.ac.uk/~vgg/data/flowers/102/categories.html) of the 102 different categories of flowers in this dataset for you reference."
@@ -131,7 +131,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Getting and exploring the dataset:\n",
+    "### Getting and exploring the dataset\n",
     "\n",
     "Now that we have our arsenal setup and have an understanding on the data we are working. Let's download it and explore it.\n",
     "\n",
@@ -1057,35 +1057,36 @@
    "source": [
     "Let's get a basic understanding of what's happening in the above code. Creating data which can be fed to a model requires two steps:\n",
     "\n",
-    "1. Create a DataBlock: \n",
+    "#### 1. Create a DataBlock: \n",
     "\n",
-    "    A `Datablock` can be considered as a series of sequential functions all collated into one function. For people who have used scikit-learn, this can be considered similar to a pipeline. \n",
+    "A `Datablock` can be considered as a series of sequential functions all collated into one function. For people who have used scikit-learn, this can be considered similar to a pipeline. \n",
     "\n",
-    "    The DataBlock API requires for mandatory fucntions  in order to get the input data in the desired format for model building and training:\n",
+    "The DataBlock API requires for mandatory fucntions  in order to get the input data in the desired format for model building and training:\n",
     "\n",
-    "    - `blocks`: \n",
-    "    This is used to define the input and output of the model. In the above code the type of input i.e the independant variable are images and hence `ImageBlock` and the output, i.e dependant variable are categories of flowers and hence `CategoryBlock`.\n",
+    "- `blocks`: \n",
+    "This is used to define the input and output of the model. In the above code the type of input i.e the independant variable are images and hence `ImageBlock` and the output, i.e dependant variable are categories of flowers and hence `CategoryBlock`.\n",
     "    \n",
-    "    - `splitter`: \n",
-    "    Splitters are used to divide our data into training and validation. This is of atmost importance because we don't want our model to train and memorize all the training images. We would like a subset of images to validate how good our model is doing. In this case we use a method that randomly splits data in train and validation. \n",
+    "- `splitter`: \n",
+    "Splitters are used to divide our data into training and validation. This is of atmost importance because we don't want our model to train and memorize all the training images. We would like a subset of images to validate how good our model is doing. In this case we use a method that randomly splits data in train and validation. \n",
     "    \n",
-    "    - `getters`:\n",
-    "    Getters are used to get the independant and dependant variables in the right order. The two getters used are `get_x` and `get_y`. Here we defined `get_x` by grabbing the name of the image file from df and adding the path to it and we defined `get_y` by getting the `class` column from df. \n",
+    "- `getters`:\n",
+    "Getters are used to get the independant and dependant variables in the right order. The two getters used are `get_x` and `get_y`. Here we defined `get_x` by grabbing the name of the image file from df and adding the path to it and we defined `get_y` by getting the `class` column from df. \n",
     "    \n",
-    "    - `transforms`: \n",
-    "    Transforms are used to perform data augmentation techniques on our input data either on the entire data(`item_tfms`) on the CPU or on the data passed as batches(`batch_tfms`) when passing it through the architecture on the GPU. In this case we are just resizing all images to `224` which is mandatory as deep learning models need all our training images to be of the same size. \n",
+    "- `transforms`: \n",
+    "Transforms are used to perform data augmentation techniques on our input data either on the entire data(`item_tfms`) on the CPU or on the data passed as batches(`batch_tfms`) when passing it through the architecture on the GPU. In this case we are just resizing all images to `224` which is mandatory as deep learning models need all our training images to be of the same size. \n",
     "    \n",
     "    \n",
-    "2. Call the dataloaders method on your data:\n",
+    "#### 2. Call the dataloaders method on your data:\n",
     "\n",
-    "    A `dataloaders` is a method called on the DataBlock where we pass in our dataframe `df` to perform all the steps mentioned in the DataBlock which finally returns the data in the required format for modeling. "
+    "A `dataloaders` is a method called on the DataBlock where we pass in our dataframe `df` to perform all the steps mentioned in the DataBlock which finally returns the data in the required format for modeling. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualizing the data:"
+    "---\n",
+    "### Visualizing the data"
    ]
   },
   {
@@ -1129,7 +1130,7 @@
     "Let's build a deep learning model on our dataset using a ***Convolutional Neural Netwok(CNN)*** model. \n",
     "\n",
     "\n",
-    "#### Basic Understanding of a CNN:\n",
+    "#### Basic understanding of CNN's\n",
     "\n",
     "Here's the general architecture of every CNN model\n",
     "\n",
@@ -1156,7 +1157,12 @@
     "- Output:\n",
     "    This is the part that associates an input image to class as labelled in our training set. When a new image of say a dog is sent through a trained model, the output class of the model will get actiavted and indicate that the input image is that of a dog. \n",
     "    \n",
-    "The entire structure of the model built above is referred to as a model `architecture` in deep learning. "
+    "The entire structure of the model built above is referred to as a model `architecture` in deep learning. \n",
+    "\n",
+    "\n",
+    "Now, we can build a flowers classifier from scratch, but since we only have 8000 odd images for 102 different classes. We can safely say that we don't have enough data to build a nice model from scratch. \n",
+    "\n",
+    "Instead let's use the biggest weapon in the deep learning arsenal available at our disposal, ***Transfer Learning***. "
    ]
   },
   {
@@ -1164,23 +1170,16 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "Now let's move on building and training the model:\n",
-    "\n",
-    "We can build a flowers classifier from scratch, but since we have only 8000 odd images for 102 different classes, we can safely say that we don't have enough data to build a nice model from scratch. \n",
-    "\n",
-    "Instead let's use the biggest weapon in the deep learning arsenal available at our disposal, ***Transfer Learning***. \n",
-    "\n",
-    "---\n",
     "#### Transfer Learning\n",
     "\n",
-    "***Transfer Learning*** is a method which uses the work done by other researchers who spend days on end to build appropriate `architectures` which train on large datasets for specific tasks. For instance, the ImageNet dataset which consists of  1.3 million images of various sizes around 500 pixels across, in 1000 categories, takes a few days to train. \n",
+    "Transfer Learning is a method which uses the work done by other researchers who spend days on end to build appropriate `architectures` which train on large datasets for specific tasks. For instance, the ImageNet dataset which consists of  1.3 million images of various sizes around 500 pixels across, in 1000 categories, takes a few days to train. \n",
     "\n",
     "The main idea is as follows, the ImageNet dataset has 1000 different everyday categories and the parameters and features it learns for each one of the categories can be applicable to make the building blocks of the flowers dataset we are working on. The initial ***feature extraction*** layers which learns simple features line lines, edges, circles etc. can be applicable to flowers as well and we can fine tune the final layers to distinguish between the different classes of flowers. \n",
     "\n",
     "The final output layer(which is trained on 1000 categories) also needs to be removed and replaced with the 102 different classes of flowers. \n",
     "\n",
     "---\n",
+    "#### Defining the learner\n",
     "\n",
     "In fastai, to build a model we use the `cnn_learner` class. We need to pass in the following details to the `cnn_learner` to train the model:\n",
     "\n",
@@ -1460,7 +1459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Training the model\n",
+    "#### Fine tuning pretrained model\n",
     "\n",
     "Once we have created our learner based on a pretrained resnet34 model, lets train our learner on classifying the flowers. In fastai there's a leraner method specifically to quickly train a pretrained model called `fine_tune`. \n",
     "\n",
