Added benchmark results for 1st post dataset

--- a/_notebooks/2020-03-28-Relearning-How-To-Learn-Deep.ipynb
+++ b/_notebooks/2020-03-28-Relearning-How-To-Learn-Deep.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Fact: Deep Learning is hard!\n",
+    "## Fact: Deep learning is hard!\n",
     "\n",
     "I have a background in Electronics Engineering and having studied in the sub-continent, the amount of exposure to programming was virtually non-existent. Since graduating, I have slowly transitioned my way into the field of data science and machine learning by starting from scratch and building block after block, the necessary skills to call myself a data scientist, and land a job in the field. \n",
     "\n",
@@ -49,7 +49,7 @@
     "In less than two weeks, I binged watch through the entire part 1! The course was nothing like I had taken  before! All the concepts explained intuitively in simple and easy manner and more importantly, everything taught was visualized through code and by building state-of-the-art models. Unfortunately, I couldn't put in the necessary focus and didn't follow through completely. But this time around I made sure to take a break in order to pursue the course this time around.\n",
     "\n",
     "---\n",
-    "## Fact: Deep Learning is easy, if done right!\n",
+    "## Fact: Deep learning is easy, if done right!\n",
     "\n",
     "The main idea of the [course](https://www.fast.ai/) and the [library](https://dev.fast.ai/) is to democratize this powerful tool of 'Deep Learning', such that it can be easily harnessed by people across all domains such that one apply the principles easily in their domain.\n",
     "\n",
@@ -1560,11 +1560,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that by using the power of transfer learning, in 2 lines of code and 3 steps of training(epochs) which took about 30 seconds to train on small GPU we are able to build a flowers classifier which can classifiy between 102 types of flowers with 96% accuracy! \n",
+    "We can see that by using the power of transfer learning, in 2 lines of code and 3 steps of training(epochs) which took about 30 seconds to train on small GPU we are able to build a flowers classifier which can classifiy between 102 types of flowers with greater than 96% accuracy! \n",
     "\n",
-    "This is pretty amazing, considering if you give me 1000x the time(~ 1 hour) to learn to classifiy even 10 breeds of flowers and I'm sure it'll be one hell of a feat if acheived. \n",
+    "This blows the original [paper](https://www.robots.ox.ac.uk/~vgg/publications/2008/Nilsback08/nilsback08.pdf) out of the water which came out in 2008 which used a non DL approach to tackle this problem and recieved an accuracy of about 72.8%\n",
     "\n",
-    "This is a good starting point. This will act as our baseline model for future imporovements and experimentation. So lets save this model so that we can build on from here form next time. "
+    "![](images/og_flowers_results.png)\n",
+    "\n",
+    "But this isn't really a fair comparison. So if we compare our basic model the current [leaderboard](https://paperswithcode.com/sota/image-classification-on-flowers-102) for the flowers-102 dataset we can see that the best accuracy on the entire dataset is about 99.7%. \n",
+    "\n",
+    "So, this is a good starting point. This will act as our baseline model for future imporovements and experimentation in order to come closer to the current benchmark. \n",
+    "\n",
+    "So lets save this model so that we can build on from here form next time. "
    ]
   },
   {
