Added learning resources to post

--- a/_notebooks/2020-03-29-Getting started with Fastai V2.ipynb
+++ b/_notebooks/2020-03-29-Getting started with Fastai V2.ipynb
@@ -12,7 +12,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Harish Vadlamani\n",
-    "- categories: [fastai, classification]\n"
+    "- categories: [fastai, image classification]\n"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "source": [
     "---\n",
     "\n",
-    "I would like to start off these series of posts with an introduction to the fastai v2 library in the application of vision, which is arguably the most common application in the field, and definitely the most worked on. \n",
+    "I would like to start off these series of posts with an introduction to the [fastai v2](http://dev.fast.ai) library in the application of vision, which is arguably the most common application in the field, and definitely the most worked on. \n",
     "\n",
     "---"
    ]
@@ -1535,6 +1535,10 @@
     "\n",
     "1. Python - Corey Schafer [Tutorials](https://www.youtube.com/watch?v=YYXdXT2l-Gg&list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU)\n",
     "2. Pandas - Corey Schafer [Tutorials](https://www.youtube.com/watch?v=ZyhVh-qRZPA&list=PL-osiE80TeTsWmV9i9c58mdDCSskIFdDS)\n",
+    "3. Fastai v2 [Documentation]()\n",
+    "\n",
+    "4. [Fastbook](https://github.com/fastai/fastbook) i.e Deep Learning for Coders with Fastai and Pytorch: AI Applications Without a PhD \n",
+    "\n",
     "3. [Fastai DataBlock API walkthrough](https://t.co/b1ZFLpJ1DN?amp=1) by [Zach Mueller](https://forums.fast.ai/u/muellerzr/summary)\n",
     "\n",
     "---\n",
