--- a/_notebooks/2020-03-29-Getting started with Fastai V2.ipynb
+++ b/_notebooks/2020-03-29-Getting started with Fastai V2.ipynb
@@ -1531,7 +1531,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Learning Resources:\n",
+    "### Learning resources\n",
     "\n",
     "1. Python - Corey Schafer [Tutorials](https://www.youtube.com/watch?v=YYXdXT2l-Gg&list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU)\n",
     "2. Pandas - Corey Schafer [Tutorials](https://www.youtube.com/watch?v=ZyhVh-qRZPA&list=PL-osiE80TeTsWmV9i9c58mdDCSskIFdDS)\n",
@@ -1539,7 +1539,7 @@
     "\n",
     "4. [Fastbook](https://github.com/fastai/fastbook) i.e Deep Learning for Coders with Fastai and Pytorch: AI Applications Without a PhD \n",
     "\n",
-    "3. [Fastai DataBlock API walkthrough](https://t.co/b1ZFLpJ1DN?amp=1) by [Zach Mueller](https://forums.fast.ai/u/muellerzr/summary)\n",
+    "5. [Fastai DataBlock API walkthrough](https://t.co/b1ZFLpJ1DN?amp=1) blog by [Zach Mueller](https://forums.fast.ai/u/muellerzr/summary)\n",
     "\n",
     "---\n",
     "\n",
