Renamed 1st notebook.

--- a/_notebooks/2020-03-29-Building an image classifier using Fastai V2.ipynb
+++ b/_notebooks/2020-03-29-Building an image classifier using Fastai V2.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " # Getting started with Fastai V2\n",
-    "> Harnessing the power of fastai to build state-of-the-art deep learning models\n",
+    "# Building an image classifier using Fastai V2\n",
+    "> Harnessing the power of fastai to build state-of-the-art deep learning models.\n",
     "\n",
     "- toc: true\n",
     "- branch: master\n",
@@ -1062,7 +1062,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Building the model:\n",
+    "### Building the model\n",
     "\n",
     "Let's build a deep learning model on our dataset using a ***Convolutional Neural Netwok(CNN)*** model. \n",
     "\n",
