Changed L notebooks name

--- a/_notebooks/2020-04-03-A look at Fastai's L Data Structure.ipynb
+++ b/_notebooks/2020-04-03-A look at Fastai's L Data Structure.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Understanding Fastai's 'L' Data Structure\n",
+    "# A look at Fastai's 'L' Data Structure\n",
     "\n",
     "- toc: true\n",
     "- branch: master\n",
@@ -21,7 +21,7 @@
     "---\n",
     "The actual documentation for `L` can be found [here](http://dev.fast.ai/core.foundation.html#L).\n",
     "\n",
-    "'L' is defined in fastcore repo and generated from the '01_foundation.ipynb' [notebook](https://github.com/fastai/fastcore/blob/master/nbs/01_foundation.ipynb).\n",
+    "`L` is defined in fastcore repo and generated from the '01_foundation.ipynb' [notebook](https://github.com/fastai/fastcore/blob/master/nbs/01_foundation.ipynb).\n",
     "\n",
     "---"
    ]
