Changed L notebooks name

--- a/_notebooks/2020-04-03-A look at Fastai's L Data Structure.ipynb
+++ b/_notebooks/2020-04-03-A look at Fastai's L Data Structure.ipynb
@@ -5,13 +5,14 @@
    "metadata": {},
    "source": [
     "# A look at Fastai's 'L' Data Structure\n",
+    "> Understanding the functionalities of the Fastai core class `L`\n",
     "\n",
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
     "- author: Harish Vadlamani\n",
-    "- categories: [fastai, data structures]"
+    "- categories: [fastai, data structures]\n"
    ]
   },
   {
@@ -49,18 +50,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## What is the 'L' data structure?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "I gave a brief intro to `L` when building an image classifier using Fastai V2 in my previous blog which you can find [here](https://harish3110.github.io/through-tinted-lenses/fastai/image%20classification/2020/03/29/Building-an-image-classifier-using-Fastai-V2.html)\n",
     "\n",
@@ -69,27 +66,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "> It's worth noting that when trying to dig deeper into an aspect of a Python library like `L` for instance, it's critical to know the basic concepts of Object Oriented Programming. This is because everything in Python is written as a Class. To get a good understanding of OOPs in Python, you can check out this great free resource [here](https://www.youtube.com/watch?v=ZDa-Z5JzLYM&list=PL-osiE80TeTsqhIuOqKhwlXsIBIdSeYtc)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Creating an `L`"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Creating an instance 'a' of class `L` from a list or any other normal iterable:"
    ]
@@ -97,9 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -119,9 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can use Python's `isinstance` method to check if `a` is an instance of `L`:  "
    ]
@@ -129,9 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -150,18 +135,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "For Creating an 'L' from an array or tensor we need to pass `use_list`=`True` since it doesn't iterate over them on construction."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "By default we get something like this:"
    ]
@@ -169,9 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -190,9 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "And when using `use_list` we get:"
    ]
@@ -200,9 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -222,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# To see a realtime example when working with datasets in Fastai\n",
@@ -236,9 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Here files is an L which can be also be checked by looking at its type as follows:"
    ]
@@ -246,9 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -267,19 +236,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "Let's take a look a better look at the class `L` using the help function:"
+    "Let's take a look a better look at the class `L` using the `help` function:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [
     {
@@ -464,15 +430,13 @@
     }
    ],
    "source": [
-    "#collapse-hide\n",
+    "#hide\n",
     "help(L)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can see that `L` inherits from class `CollBase`."
    ]
@@ -701,7 +665,7 @@
     }
    ],
    "source": [
-    "#collapse-show\n",
+    "#hide\n",
     "dir(L)"
    ]
   },
