made some visual changes to L notebook

--- a/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
+++ b/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
@@ -28,22 +28,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
-    "## Imports"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "#hide_input\n",
     "from fastcore.imports import *\n",
     "from fastai2.vision.all import *"
    ]
@@ -430,7 +420,7 @@
     }
    ],
    "source": [
-    "#hide\n",
+    "#hide_output\n",
     "help(L)"
    ]
   },
@@ -1285,9 +1275,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2. Fastai Specific Methods"
    ]
@@ -1295,9 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1319,19 +1305,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Out of these methods the only interesting method is `_new` so lets look at that:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### 2.1 `_new`"
    ]
@@ -1339,9 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1361,9 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1383,9 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a._new??"
@@ -1393,9 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "The `_new` creates a new instance of `L` which requires some items to be passed to it. "
    ]
@@ -1403,9 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1424,19 +1395,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "#### Soft copy"
+    "Using `_new` to create a soft copy of `a`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = L([1, 2, 3])"
@@ -1445,9 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1468,9 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1490,9 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1513,9 +1474,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1534,9 +1493,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "> ***Note:*** The `__mul__` function uses `_new`, it returns:\n",
     "``` \n",
