made some visual changes to L notebook 2

--- a/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
+++ b/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,14 +672,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "###  `__getitem__`"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We can check how each method works by using the '??' in jupyter notebooks after the method name"
    ]
@@ -687,7 +691,9 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#hide\n",
@@ -696,7 +702,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Or we can use the `help` method:"
    ]
@@ -704,7 +712,9 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -719,12 +729,15 @@
     }
    ],
    "source": [
+    "#hide_input\n",
     "help(a.__getitem__)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We can access the index of an L as follows:"
    ]
@@ -732,7 +745,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -751,7 +766,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Or in the more appealing way by indexing as follows:"
    ]
@@ -759,7 +776,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -778,7 +797,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "In practical terms, in case we want to see one image file path when building a model we can do it as follows:"
    ]
@@ -786,7 +807,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -805,7 +828,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> ***Note***: Internally in Python, when we index as iterable like `L` as hsown aboev, it internally calls the `__getitem__` method."
    ]
@@ -835,6 +860,7 @@
     }
    ],
    "source": [
+    "#hide_input\n",
     "help(a.__setitem__)"
    ]
   },
@@ -918,7 +944,7 @@
     }
    ],
    "source": [
-    "#collapse-hide\n",
+    "#hide_input\n",
     "\n",
     "help(a.__contains__)"
    ]
@@ -1021,6 +1047,7 @@
     }
    ],
    "source": [
+    "#hide_input\n",
     "help(a.__delitem__)"
    ]
   },
@@ -1131,6 +1158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
     "a.__mul__??"
    ]
   },
@@ -1205,6 +1233,27 @@
    "metadata": {},
    "source": [
     "###  `_new`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function _new in module fastcore.foundation:\n",
+      "\n",
+      "_new(self, items, *args, **kwargs)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hide_input\n",
+    "help(L._new)"
    ]
   },
   {
@@ -1406,10 +1455,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Very similar to a list in python, even 'L' has an append method"
+    "#hide_input\n",
+    "help(L.append)"
    ]
   },
   {
@@ -1476,7 +1528,7 @@
     }
    ],
    "source": [
-    "#collapse-hide\n",
+    "#hide_input\n",
     "help(L.attrgot)"
    ]
   },
@@ -1573,7 +1625,7 @@
     }
    ],
    "source": [
-    "#collapse-hide\n",
+    "#hide_input\n",
     "help(L.enumerate)"
    ]
   },
@@ -1658,7 +1710,7 @@
     }
    ],
    "source": [
-    "#collapse-hide\n",
+    "#hide_input\n",
     "help(L.filter)"
    ]
   },
@@ -1743,7 +1795,7 @@
     }
    ],
    "source": [
-    "#collapse-hide\n",
+    "#hide_input\n",
     "help(L.map)"
    ]
   },
@@ -1799,7 +1851,7 @@
     }
    ],
    "source": [
-    "#collapse-hide\n",
+    "#hide_input\n",
     "help(L.map_dict)"
    ]
   },
@@ -1855,7 +1907,7 @@
     }
    ],
    "source": [
-    "#collapse-hide\n",
+    "#hide_input\n",
     "help(L.zip)"
    ]
   },
@@ -1904,7 +1956,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.8 split"
+    "### split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide_input\n",
+    "help(L.split)"
    ]
   },
   {
@@ -1952,6 +2014,7 @@
     }
    ],
    "source": [
+    "#hide_input\n",
     "help(L.concat)"
    ]
   },
