--- a/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
+++ b/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
@@ -30,15 +30,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Importing the libraries needed:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#collapse-hide\n",
     "from fastcore.imports import *\n",
     "from fastai2.vision.all import *"
    ]
@@ -61,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I gave a brief intro to `L` when building an image classifier using Fastai V2 in my previous blog which you can find [here](https://harish3110.github.io/through-tinted-lenses/fastai/image%20classification/2020/03/29/Building-an-image-classifier-using-Fastai-V2.html)\n",
+    "In my previous blog I gave a brief intro to `L` when building an image classifier using Fastai V2  which you can find [here](https://harish3110.github.io/through-tinted-lenses/fastai/image%20classification/2020/03/29/Building-an-image-classifier-using-Fastai-V2.html)\n",
     "\n",
     "`L` is a special Fastai datastructure made specifically to handle with ease the model building in the library. Since, it forms the basic foundation to using the library, it's worth digging deeper into its functionalities. "
    ]
@@ -1276,7 +1277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Out of these methods the only interesting method is `_new` so lets look at that:"
+    "Out of these methods the most interesting method is `_new` so lets look at that:"
    ]
   },
   {
