--- a/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
+++ b/_notebooks/2020-04-03-A look at the L Data Structure in Fastai.ipynb
@@ -692,7 +692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Special/ Dunder/ Magic  Methods"
+    "## 1. Special/ dunder/ magic methods"
    ]
   },
   {
@@ -1247,7 +1247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Fastai Specific Methods"
+    "## 2. Fastai specific methods"
    ]
   },
   {
@@ -1503,7 +1503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Normal Methods"
+    "## 3. Normal methods"
    ]
   },
   {
