Made final changes to improving baseline model notebook

--- a/_notebooks/2020-04-10-Improving baseline model.ipynb
+++ b/_notebooks/2020-04-10-Improving baseline model.ipynb
@@ -11849,7 +11849,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## fit_one_cycle, unfreeze and further training"
+    "## 1 cycle training"
    ]
   },
   {
@@ -12471,14 +12471,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Number of epochs of training"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Let's try training the model a little more and see what happens"
    ]
@@ -12487,6 +12491,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -12543,7 +12548,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -12564,7 +12571,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We can see that the ***number of epochs*** of training is quite important as shown in this case. \n",
     "\n",
@@ -12575,14 +12584,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "So in order to find the ideal number of epochs to train Fastai suggests to employ the `fit_one_cycle` method, unfreeze and train a set number of epochs till you find that your model metric is still reducing and the training is going on well. The point where you see that metric is going wac"
+    "So in order to find the ideal number of epochs to train Fastai suggests to employ the `fit_one_cycle` method, unfreeze and train a set number of epochs till you find that your model metric is still reducing and the training is going on well. The point where you see that metric is going wack and not training properly anymore is where you have gone too far and need to start training again till an epoch or two before! "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "---"
    ]
@@ -12593,7 +12606,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## Deeper Architectures"
+    "## Deeper architectures"
    ]
   },
   {
