Made final changes to improving baseline model notebook

--- a/_notebooks/2020-04-10-Improving baseline model.ipynb
+++ b/_notebooks/2020-04-10-Improving baseline model.ipynb
@@ -5,13 +5,14 @@
    "metadata": {},
    "source": [
     "# Improving flowers-102 baseline model\n",
+    "> Aim\n",
     "\n",
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
     "- author: Harish Vadlamani\n",
-    "- categories: [fastai, image classification, data augmentation]"
+    "- categories: [fastai, image classification, model fine-tuning]"
    ]
   },
   {
